--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            margin-top: 2em;
         }
         img {
             height: 100%;
@@ -40,19 +41,16 @@
 <body>
     <nav>
         <h1>
-            Welcome to Nico's Picture Space
+            Look at that Coding Cat - Wow
         </h1>
     </nav>
-    <p>
-        Refresh the page to get a new random picture of Nico!
-    </p>
     <div id="imgDiv">
-        <img src="" alt="A picture of Nico?!" id="pic">
+        <img src="./ooop.gif" alt="Hacker Cat?!" id="pic">
     </div>
-    <script>
+    <!-- <script>
         const NUMPICS = 13;
         let src = `./pictures/${Math.floor(Math.random() * NUMPICS)}.jpeg`;
         document.getElementById("pic").src = src;
-    </script>
+    </script> -->
 </body>
 </html>
