--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nikos Picture Space</title>
+    <title>Coding Cat!</title>
     <style>
         * {
             font-family: 'Open Sans', sans-serif;
@@ -21,9 +21,6 @@
             color: white;
             font-size: 3
             5px;
-        }
-        p {
-            margin: 1em 50px;
         }
         #imgDiv {
             width: 100%;
